add company delete
